Agregar campo "Para" en el recibo y actualizar información de contacto

--- a/index.html
+++ b/index.html
@@ -233,6 +233,11 @@
             </div>
 
             <div class="campo">
+                <label>Para:</label>
+                <input type="text" class="dato-input" id="inputDe" placeholder="Nombre o Razón Social de quien recibe" />
+            </div>
+
+            <div class="campo">
                 <label>Fecha de Emisión:</label>
                 <input type="date" class="dato-input" id="inputFecha" />
             </div>
@@ -254,15 +259,9 @@
         </div>
 
         <div class="info-adicional">
-            <p><strong>Rut:</strong> <span style="font-family: monospace;">12690283-3</span></p>
-            <p><strong>Teléfono de Contacto:</strong> <span style="font-family: monospace;">+56 9 8421 5617</span></p>
+            <p><strong>Rut:</strong> <span style="font-family: monospace;">12670283-3</span></p>
+            <p><strong>Teléfono de Contacto:</strong> <span style="font-family: monospace;">+56984215617</span></p>
         </div>
-
-        <div class="firma">
-            <span class="firma-linea"></span>
-            <p style="margin: 0; font-size: 0.9em; color: #333;">Firma / Recibido Conforme</p>
-        </div>
-        
     </div>
     
     <button id="descargarBtn" class="btn-descarga">Descargar Recibo en PDF 📥</button>
